--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.3.4",
+    "lucide-react": "^0.525.0",
     "motion": "^12.18.1",
     "next": "15.3.3",
     "next-mdx-remote": "^5.0.0",
